2007-01-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-banner.c:
	* src/hildon-banner.h:
	* src/hildon-note.c:
	* src/hildon-banner-private.h: Cleaning up the HildonBanner.

	* src/hildon-color-chooser-dialog-private.h:
	* src/hildon-color-chooser-dialog.c:
	* src/hildon-color-chooser-dialog.h: Fixing build.

2007-01-04  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-note.c:
	* src/hildon-note.h:
	* src/hildon-note-private.h: Cleaning up the HildonNote.

2007-01-04  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-date-editor-private.h:
	* src/hildon-date-editor.c:
	* src/hildon-date-editor.h: Cleaning up the date editor.

2007-01-03  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-private.h: Removing. It was only holding one private
	function which is now public (makes sense).

	* src/hildon-time-editor-private.h:
	* src/hildon-time-editor.c:
	* src/hildon-time-editor.h:
	* src/hildon-time-picker.c:
	* src/hildon-widgets.h: Cleaning up the time editor.

2007-01-03  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-color-chooser-dialog.c:
	* src/hildon-color-chooser-dialog.h:
	* src/hildon-color-chooser.c:
	* src/hildon-color-chooser.h: More color chooser stuff.

2007-01-03  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* plugins:
	* plugins/Makefile.am:
	* plugins/hildon-color-chooser-dialog-hsv.c:
	* plugins/hildon-color-chooser-hsv.c:
	* src/Makefile.am:
	* src/hildon-plugin-widget.c:
	* src/hildon-plugin-widget.h: Removing old plugin bits.

2007-01-03  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/Makefile.am:
	* src/hildon-color-button-private.h:
	* src/hildon-color-button.c:
	* src/hildon-color-button.h:
	* src/hildon-color-chooser-button.c:
	* src/hildon-color-chooser-button.h:
	* src/hildon-color-chooser-dialog-private.h:
	* src/hildon-color-chooser-dialog.c:
	* src/hildon-color-chooser-dialog.h: